@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Apache-Gallery
-version:      0.9
+version:      0.9.1
 version_from: lib/Apache/Gallery.pm
 installdirs:  site
 requires:
